# obs-studio

./: CMakeLists.txt
UI/: CMakeLists.txt
livetest/: CMakeLists.txt  audio-encoders.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platform-windows.cpp  qt-wrappers.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-preview.cpp  window-basic-preview.hpp
test/win/: test.cpp
